[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wifi-supervision-tool"
version = "0.1.0"
description = "Outil de supervision et d'analyse de réseaux Wi-Fi"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "scapy>=2.5.0",
    "python-nmap>=0.7.1",
    "tinydb>=4.8.0",
]

[project.scripts]
wifi-tool = "cli.main:app"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
]
